--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,4 @@ venv
 
 .show_git_bash_profile
 miguelgrinbergs_github_link
-v0.1sample_http_requests
-v0.2sample_http_requests
+v*sample_http_requests
